<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothInvokeExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="START_DEVICE_CHOICE">Choose between GUI or Compute device.</string>
    <string name="BUTTON_COMPUTE_DEVICE">Compute device</string>
    <string name="BUTTON_GUI_DEVICE">GUI device</string>
    <string name="title_activity_compute">ComputeActivity</string>
    <string name="BUTTON_HAILSTONE">Run Hailstone example</string>
    <string name="BUTTON_SLEEP">Run Sleep example</string>
    <string name="BUTTON_PROXY">Run Proxy example</string>
    <string name="BUTTON_CONNECT">Connect</string>

</resources>
